--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <head>Sagar Majgude</head>
     <h1>Sagar majgude</h1>
     <h1>Hi there</h1>
+    <p>This is paragraph</p>
 </head>
 <body>
     
